--- a/course-detail.html
+++ b/course-detail.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Udema a modern educational site template">
     <meta name="author" content="Ansonika">
-    <title>UDEMA | Modern Educational site template</title>
+    <title>Sanly Bilim</title>
 
     <!-- Favicons-->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -102,12 +102,12 @@
 							<div class="row">
 								<div class="col-lg-4">
 									<video width="200" controls>
-										<source src="video/biz-barada.mp4" type="video/mp4">
+										<source src="#" type="video/mp4">
 									</video>
 								</div>
 								<div class="col-lg-4">
 									<video width="200" controls>
-										<source src="video/biz-barada.mp4" type="video/mp4">
+										<source src="#" type="video/mp4">
 									</video>
 								</div>
 								<div class="col-lg-4">
