--- a/about.html
+++ b/about.html
@@ -267,7 +267,7 @@
 					</ul>
 				</div>
 				<div class="col-md-4">
-					<div id="copy">© 2017 Udema</div>
+					<div id="copy">Sanly bilim</div>
 				</div>
 			</div>
 		</div>
